syntax = "proto3";
package account_auth_service;

option go_package = "./account_auth_service";

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}

message Empty {
}


service AccountAuthenticationService {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc UserRegisterRequest(RegisterRequest) returns (RegisterReply);
    rpc UserRegisterConfirm(RegisterConfirmRequest) returns (RegisterConfirmReply);
    rpc JWTIsOK(JWTIsOKRequest) returns (JWTIsOKReply);
}


message RegisterRequest {
    string email = 1;
}

message RegisterReply {
    string result = 1;
    optional string error = 2;
}

message RegisterConfirmRequest {
    string email = 1;
    string random_string = 2;
}

message RegisterConfirmReply {
    string jwt = 1;
    optional string error = 2;
}

message JWTIsOKRequest {
    string jwt = 1;
}

message JWTIsOKReply {
    string email = 1;
    optional string error = 2;
}
