syntax = "proto3";
package data_model;

option go_package = "./data_model";

message User {
    string email = 1;
    optional string username = 2;
    optional string head_image = 3; //base64 string of an image
    optional int32 sex = 4; //AI detect. 0: female, 1: male
    optional int32 age = 5; //AI detect.
}

message LocationOfFreeMap {
    optional int32 location_id = 1;
    double name = 2;
    double y_latitude = 3;
    double x_longitude = 4;
    double scores = 5;
    bool open_all_day = 6;
    bool has_charger = 7;
    bool has_wifi = 8;
    bool has_water = 9;
    bool has_hot_water = 10;
    bool has_desk = 11;
    bool has_chair = 12;
    bool has_toilet = 13;
    bool has_showering = 14; // must make sure there can take showering
    bool has_package_receiving_station = 15;
    bool has_kfc = 16;
    bool has_mcdonald = 17;
    bool has_store = 18;
    // string open_and_close_time = 19;
}
